--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 
 	<h1>danny greg</h1>
 	<div><img src="codercat.jpg" alt=""></div>
-	<p>I work at <a href="http://github.com/dannygreg">GitHub</a>. I have <a href="http://www.twitter.com/dannygreg">Twitter</a>.</p>
+	<p><img src="octocat.png" alt="" />I work at <a href="http://github.com/dannygreg">GitHub</a>.</p>
+	<p><img src="twitter.png" alt="" />I have <a href="http://www.twitter.com/dannygreg">Twitter</a>.</p>
 </body>
