--- a/index.html
+++ b/index.html
@@ -8,4 +8,19 @@
 	<div><img src="codercat.jpg" alt=""></div>
 	<p><img src="octocat.png" alt="" />I work at <a href="http://github.com/dannygreg">GitHub</a>.</p>
 	<p><img src="twitter.png" alt="" />I have <a href="http://www.twitter.com/dannygreg">Twitter</a>.</p>
+	
+	<script type="text/javascript">
+	  var _gauges = _gauges || [];
+	  (function() {
+	    var t   = document.createElement('script');
+	    t.type  = 'text/javascript';
+	    t.async = true;
+	    t.id    = 'gauges-tracker';
+	    t.setAttribute('data-site-id', '4f515e5ff5a1f5018c00000b');
+	    t.src = '//secure.gaug.es/track.js';
+	    var s = document.getElementsByTagName('script')[0];
+	    s.parentNode.insertBefore(t, s);
+	  })();
+	</script>
+	
 </body>
