Specific colours for links.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 	<h1>danny greg</h1>
 	<div><img src="codercat.jpg" alt=""></div>
-	<p><img src="octocat.png" alt="" />I work at <a href="http://github.com/dannygreg">GitHub</a>.</p>
-	<p><img src="twitter.png" alt="" />I have <a href="http://www.twitter.com/dannygreg">Twitter</a>.</p>
+	<p><img class="bullet" src="octocat.png" alt="" />I work at <a id="github" href="http://github.com/dannygreg">GitHub</a>.</p>
+	<p><img class="bullet" src="twitter.png" alt="" />I have <a id=twitter href="http://www.twitter.com/dannygreg">Twitter</a>.</p>
 	
 	<script type="text/javascript">
 	  var _gauges = _gauges || [];
